[package]
name = "connor"
version = "0.1.0"
edition = "2021"
description = "服务发现和注册中心（康纳）"
authors = ["潘吉祥"]

[dependencies]
futures = "0.3.21"
tokio = { version = "1.18.0", features = ["macros", "rt", "rt-multi-thread", "net", "io-util", "time", "sync"] }
tokio-stream = { version = "0.1.8", features = ["net"]}
tokio-util = { version = "0.7.1", features = ["codec"] }

tracing = "0.1.34"
tracing-subscriber = {version = "0.3.11",features = ["local-time","time"]}
time = {version = "0.3.9",features = ["macros"]}

bytes = "1.1.0"
serde = "1.0.136"
serde_derive = "1.0.136"
serde_json = "1.0.79"

anyhow = "1.0.56"
parking_lot = "0.12.0"

config = {version = "0.13.0",features = ["yaml"]}
lazy_static = "1.4.0"

